--- a/src/app/pages/poke-list/pagination/pagination.component.html
+++ b/src/app/pages/poke-list/pagination/pagination.component.html
@@ -1,10 +1,3 @@
-<mat-paginator [length]="100"
-               [pageSize]="10"
-               (page)="pageEvent = $event">
-</mat-paginator>
-<div *ngIf="pageEvent">
-  <h5>Page Change Event Properties</h5>
-  <div>List length: {{pageEvent.length}}</div>
-  <div>Page size: {{pageEvent.pageSize}}</div>
-  <div>Page index: {{pageEvent.pageIndex}}</div>
-</div>
+<button *ngFor="let offsetValue of offsetValues; let i = index"
+(click)="sendOffset(offsetValue)"> {{i+1}}
+</button>
