--- a/src/app/pages/poke-details/poke-details.component.html
+++ b/src/app/pages/poke-details/poke-details.component.html
@@ -1,2 +1,35 @@
-poke details, id: {{pokeId}}
-<pre>{{details | json}}</pre>
+<div fxLayout="column"
+     fxLayoutGap="15px"
+     align="center">
+    <mat-card class="example-card"
+              *ngIf="pokeDetails">
+        <mat-card-header>
+            <mat-card-title>{{pokeId}} {{ pokeDetails.name }}</mat-card-title>
+        </mat-card-header>
+        <img mat-card-image
+             [src]="pokeDetails.sprites.front_default"
+             alt="{{ pokeDetails.sprites.front_default }}">
+        <mat-card-content>
+            <p *ngFor="let stat of pokeDetails.stats | keyvalue">
+                {{stat | json}}
+            </p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button
+                    (click)="choosePokemon(action='previous')">
+                <mat-icon aria-hidden="false"
+                          aria-label="Next">arrow_left</mat-icon>
+                Previous
+            </button>
+            <button mat-button
+                    routerLink="/">
+                <mat-icon aria-hidden="false"
+                          aria-label="home">home</mat-icon>
+            </button>
+            <button mat-button
+                    (click)="choosePokemon(action='next')">Next<mat-icon aria-hidden="false"
+                          aria-label="Next">arrow_right</mat-icon>
+            </button>
+        </mat-card-actions>
+    </mat-card>
+</div>
