--- a/src/app/pages/poke-details/poke-details.component.scss
+++ b/src/app/pages/poke-details/poke-details.component.scss
@@ -1,8 +1,7 @@
-.example-card {
-  max-width: 400px;
+mat-card-image {
+  width: 20%;
 }
 
-.example-header-image {
-  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
-  background-size: cover;
+mat-card-content {
+  margin: 10px;
 }
