--- a/src/app/pages/poke-list/pagination/pagination.component.html
+++ b/src/app/pages/poke-list/pagination/pagination.component.html
@@ -1,5 +1,5 @@
 <button mat-button
-        (click)="setPage(action='previous')">
+        (click)="setPage('previous')">
     <mat-icon aria-hidden="false"
               aria-label="Next">arrow_left</mat-icon>
 </button>
@@ -9,7 +9,7 @@
         (click)="setCurrentPage(i)"> {{i+1}}
 </button>
 <button mat-button
-        (click)="setPage(action='next')">
+        (click)="setPage('next')">
     <mat-icon aria-hidden="false"
               aria-label="Next">arrow_right</mat-icon>
 </button>
